feat: search booking by booking code